# communication_bluetooth_service

./: .gitignore  bundle.json
sa_profile/: 1130.json
services/bluetooth/hardware/: BUILD.gn
services/bluetooth/ipc/: BUILD.gn
services/bluetooth/ipc/include/: bluetooth_a2dp_sink_stub.h  bluetooth_a2dp_src_stub.h  bluetooth_avrcp_ct_stub.h  bluetooth_avrcp_tg_stub.h  bluetooth_ble_advertise_callback_proxy.h  bluetooth_ble_advertiser_stub.h  bluetooth_ble_central_manager_stub.h  bluetooth_ble_peripheral_observer_proxy.h  bluetooth_gatt_client_callback_proxy.h  bluetooth_gatt_client_stub.h  bluetooth_gatt_server_callback_proxy.h  bluetooth_gatt_server_stub.h  bluetooth_hfp_ag_stub.h  bluetooth_hfp_hf_stub.h  bluetooth_hid_device_stub.h  bluetooth_hid_host_stub.h  bluetooth_host_observer_proxy.h  bluetooth_host_stub.h  bluetooth_pan_stub.h  bluetooth_remote_device_observer_proxy.h  bluetooth_socket_stub.h
services/bluetooth/ipc/src/: bluetooth_a2dp_sink_stub.cpp  bluetooth_a2dp_src_stub.cpp  bluetooth_avrcp_ct_stub.cpp  bluetooth_avrcp_tg_stub.cpp  bluetooth_ble_advertise_callback_proxy.cpp  bluetooth_ble_advertiser_stub.cpp  bluetooth_ble_central_manager_stub.cpp  bluetooth_ble_peripheral_observer_proxy.cpp  bluetooth_gatt_client_callback_proxy.cpp  bluetooth_gatt_client_stub.cpp  bluetooth_gatt_server_callback_proxy.cpp  bluetooth_gatt_server_stub.cpp  bluetooth_hfp_ag_stub.cpp  bluetooth_hfp_hf_stub.cpp  bluetooth_hid_device_stub.cpp  bluetooth_hid_host_stub.cpp  bluetooth_host_observer_proxy.cpp  bluetooth_host_stub.cpp  bluetooth_pan_stub.cpp  bluetooth_remote_device_observer_proxy.cpp  bluetooth_socket_stub.cpp
services/bluetooth/server/: BUILD.gn
services/bluetooth/server/include/: bluetooth_ble_advertiser_server.h  bluetooth_ble_central_manager_server.h  bluetooth_gatt_client_server.h  (+5 more)
services/bluetooth/service/: BUILD.gn
services/bluetooth/stack/: BUILD.gn
test/example/bluetoothtest/: .gitignore  BUILD.gn  CHANGELOG-API23.md  build-profile.json5  oh-package.json5
test/fuzztest/host/: BUILD.gn
test/unittest/: BUILD.gn
test/unittest/a2dp/: BUILD.gn
test/unittest/avrcp/: BUILD.gn
test/unittest/ble/: BUILD.gn
test/unittest/gatt/: BUILD.gn  gatt_characteristic_test.cpp
test/unittest/gatt_c/: BUILD.gn
test/unittest/hfp/: BUILD.gn
test/unittest/hid/: BUILD.gn  hid_host_test.cpp
test/unittest/host/: BUILD.gn  host_test.cpp
test/unittest/map/: BUILD.gn
test/unittest/opp/: BUILD.gn
test/unittest/pan/: BUILD.gn
test/unittest/pbap/: BUILD.gn
test/unittest/spp/: BUILD.gn  spp_test.cpp
(+405 files in other folders)
